--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <script src="https://cdn.static.runoob.com/libs/jquery/2.1.1/jquery.min.js"></script>
   <script>
     $(document).ready(function () {
-      $('#carouselExampleIndicators').carousel({ interval: 4000 });//輪播速度 
+      $('#carouselExampleIndicators').carousel({ interval: 4000 });
     });
   </script>
   <link rel="stylesheet" href="./css/myStyle.css">
@@ -333,7 +333,6 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
-  <!-- Back to Top套件 -->
   <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 </body>
 
