--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
         </li>
       </ul>
       <form class="form-inline my-2 my-lg-0">
-        <input disabled="value" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-dark my-2 my-sm-0" type="submit" href="index.html">Search</button>
+        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-dark my-2 my-sm-0" type="submit"><a href="index.html">Search</a></button>
       </form>
     </div>
   </nav>
