--- a/index.html
+++ b/index.html
@@ -175,10 +175,10 @@
           <img src="./images/t01.png" width="450" height="350" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title" style="font-weight:bold;">殺老師</h5>
-            <p class="card-text" style="text-align:justify;">
+            <div class="card-text" style="text-align:justify;">
               擅長科目：英文、日文、軍訓<br>
-              對各種領域的知識有相當程度的涉獵，根據學生特質給予相異的考試題目。
-            </p>
+              對各種領域的知識有相當程度的涉獵，根據學生特質給予相異的考試題目。<p>
+            </div>
             <button class="btn btn-primary">詳細資訊</button>
           </div>
         </div>
@@ -188,10 +188,10 @@
           <img src="./images/t02.png" width="450" height="350" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title" style="font-weight:bold;">鳥羽美波</h5>
-            <p class="card-text" style="text-align:justify;">
+            <div class="card-text" style="text-align:justify;">
               擅長科目：家政、日語<br>
-              每天都會喝酒，雖然醉後不會麻煩到他人，但性格會像換了個人似的。
-            </p>
+              每天都會喝酒，雖然醉後不會麻煩到他人，但性格會像換了個人似的。<p>
+            </div>
             <button class="btn btn-primary">詳細資訊</button>
           </div>
         </div>
@@ -201,10 +201,10 @@
           <img src="./images/t03.png" width="450" height="350" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title" style="font-weight:bold;">尼爾·阿姆斯壯</h5>
-            <p class="card-text" style="text-align:justify;">
+            <div class="card-text" style="text-align:justify;">
               擅長科目：英文、太空科學<br>
-              左腳踏上了月球，並說道：「這是一個人的一小步，卻是人類的一大步。」
-            </p>
+              左腳踏上了月球，並說道：「這是一個人的一小步，卻是人類的一大步。」<p>
+            </div>
             <button class="btn btn-primary">詳細資訊</button>
           </div>
         </div>
@@ -214,10 +214,10 @@
           <img src="./images/t04.png" width="450" height="350" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title" style="font-weight:bold;">戶川老師</h5>
-            <p class="card-text" style="text-align:justify;">
+            <div class="card-text" style="text-align:justify;">
               擅長科目：小學的國英數社自、日文<br>
-              學識淵博，且教學認真，不斷鼓勵、關懷學生，是人人稱讚的好老師。
-            </p>
+              學識淵博，且教學認真，不斷鼓勵、關懷學生，是人人稱讚的好老師。<p>
+            </div>
             <button class="btn btn-primary">詳細資訊</button>
           </div>
         </div>
@@ -237,9 +237,9 @@
           <div class="media-body">
             <h5 class="mt-0" style="font-weight:bold;">土間埋</h5>
             <div style="text-align:justify;">
-              <p>當你搞懂後就會明白了。布邊曼說過一句著名的話，最本質的人性價值就是人的獨立性。
-                這句話看似簡單，卻埋藏了深遠的意義。不難發現，問題在於該用什麼標準來做決定呢？
-                領悟其中的道理也不是那麼的困難。儘管日語檢定看似不顯眼，卻佔據了我的腦海。</p>
+              當你搞懂後就會明白了。布邊曼說過一句著名的話，最本質的人性價值就是人的獨立性。
+              這句話看似簡單，卻埋藏了深遠的意義。不難發現，問題在於該用什麼標準來做決定呢？
+              領悟其中的道理也不是那麼的困難。儘管日語檢定看似不顯眼，卻佔據了我的腦海。
             </div>
           </div>
         </div>
@@ -250,12 +250,11 @@
           <div class="media-body">
             <h5 class="mt-0" style="font-weight:bold;">江戶川柯南</h5>
             <div style="text-align:justify;">
-              <p>其實，若思緒夠清晰，那麼TOEFL測驗也就不那麼複雜了。
+                其實，若思緒夠清晰，那麼TOEFL測驗也就不那麼複雜了。
                 就我個人來說，TOEFL測驗對我的意義，不能不說非常重大。
                 話雖如此，郭沫若曾經說過，形成天才的決定因素應該是勤奮。這句話反映了問題的急切性。
                 如果父親真的責備我，可能會引起我的反感，而無益於我德性的進長。這似乎解答了我的疑惑。
-              </p>
-            </div>
+            /div>
           </div>
         </div>
       </div>
@@ -265,9 +264,9 @@
           <div class="media-body">
             <h5 class="mt-0" style="font-weight:bold;">椎名真白</h5>
             <div style="text-align:justify;">
-              <p>若到今天結束時我們都還無法釐清TOEIC的意義，那想必我們昨天也無法釐清。
-                TOEIC必定會成為未來世界的新標準。契訶夫深信，蚜蟲吃青草，銹吃鐵，虛偽吃靈魂。
-                這段話非常有意思。我認為，TOEIC，發生了會如何，不發生又會如何。</p>
+              若到今天結束時我們都還無法釐清TOEIC的意義，那想必我們昨天也無法釐清。
+              TOEIC必定會成為未來世界的新標準。契訶夫深信，蚜蟲吃青草，銹吃鐵，虛偽吃靈魂。
+              這段話非常有意思。我認為，TOEIC，發生了會如何，不發生又會如何。
             </div>
           </div>
         </div>
@@ -278,9 +277,9 @@
           <div class="media-body">
             <h5 class="mt-0" style="font-weight:bold;">雪之下雪乃</h5>
             <div style="text-align:justify;">
-              <p>IELTS 8.0分似乎是一種巧合，但如果我們從一個更大的角度看待問題，這似乎是一種不可避免的事實。
-                德謨克利特曾經提過，理想的實現只天馬行空，不靠空談。這句話令我不禁感慨問題的迫切性。
-                IELTS 8.0分的發生，到底需要如何實現，不IELTS 8.0分的發生，又會如何產生。</p>
+              IELTS 8.0分似乎是一種巧合，但如果我們從一個更大的角度看待問題，這似乎是一種不可避免的事實。
+              德謨克利特曾經提過，理想的實現只天馬行空，不靠空談。這句話令我不禁感慨問題的迫切性。
+              IELTS 8.0分的發生，到底需要如何實現，不IELTS 8.0分的發生，又會如何產生。
             </div>
           </div>
         </div>
