--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html lang="en">
-
 <head>
   <title>虎科外語學習班</title>
   <!-- Required meta tags -->
@@ -12,8 +11,7 @@
   <script src="https://cdn.static.runoob.com/libs/jquery/2.1.1/jquery.min.js"></script>
   <link rel="stylesheet" href="./css/myStyle.css">
   <script src='./js/myjs.js'></script>
-  </head>
-
+</head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #f3e7f3;">
     <a class="navbar-brand" href="./index.html">虎科外語學習班</a>
@@ -83,8 +81,6 @@
       </form>
     </div>
   </nav>
-
-  <!-- Carousel -->
   <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
       <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -111,8 +107,6 @@
       <span class="sr-only">Next</span>
     </a>
   </div>
-
-  <!-- 最新消息 -->
   <div class="container">
     <h1 class="mt-5">最新消息</h1>
     <div class="accordion" id="accordionExample">
@@ -165,8 +159,6 @@
       </div>
     </div>
   </div>
-
-  <!-- 新進教師 -->
   <div class="container-fluid mt-5 px-4">
     <h1 class="mt-5">新進教師</h1>
     <div class="row">
@@ -224,10 +216,6 @@
       </div>
     </div>
   </div>
-
-  <!-- 學員心得 -->
-  <!-- div.container 代表產生 div class="container" -->
-  <!-- style="margin top:30px" -->
   <div class="container" style="margin-top: 50px;">
     <h1 class="mt-5"><a name="Experience">學員心得</a></h1>
     <div class="row">
@@ -250,11 +238,11 @@
           <div class="media-body">
             <h5 class="mt-0" style="font-weight:bold;">江戶川柯南</h5>
             <div style="text-align:justify;">
-                其實，若思緒夠清晰，那麼TOEFL測驗也就不那麼複雜了。
-                就我個人來說，TOEFL測驗對我的意義，不能不說非常重大。
-                話雖如此，郭沫若曾經說過，形成天才的決定因素應該是勤奮。這句話反映了問題的急切性。
-                如果父親真的責備我，可能會引起我的反感，而無益於我德性的進長。這似乎解答了我的疑惑。
-            /div>
+              其實，若思緒夠清晰，那麼TOEFL測驗也就不那麼複雜了。
+              就我個人來說，TOEFL測驗對我的意義，不能不說非常重大。
+              話雖如此，郭沫若曾經說過，形成天才的決定因素應該是勤奮。這句話反映了問題的急切性。
+              如果父親真的責備我，可能會引起我的反感，而無益於我德性的進長。這似乎解答了我的疑惑。
+            </div>
           </div>
         </div>
       </div>
@@ -286,15 +274,9 @@
       </div>
     </div>
   </div>
-
-  <!-- 學員成果 -->
   <div class="container">
     <h1 class="mt-5">學員成果</h1>
     <div class="row">
-      <!-- col-md-2 切十二等分 -->
-      <!-- col-lg-3 佔三欄 -->
-      <!-- col-12 每一列出現一欄 -->
-      <!-- p-0 = padding-0 消除背景顏色 -->
       <div class="col-12 col-sm-6 col-md-4 col-lg-3 text-white mb-3 p-0 mr-3"><img class="img-fluid"
           src="./images/e01.png" width="450" height="450" alt=""></div>
       <div class="col-12 col-sm-6 col-md-4 col-lg-3 text-white mb-3 p-0 mr-3"><img class="img-fluid"
@@ -330,5 +312,4 @@
     crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 </body>
-
 </html>
