--- a/index.html
+++ b/index.html
@@ -281,9 +281,9 @@
           src="./images/e01.png" width="450" height="450" alt=""></div>
       <div class="col-12 col-sm-6 col-md-4 col-lg-3 text-white mb-3 p-0 mr-3"><img class="img-fluid"
           src="./images/e02.png" width="450" height="450" alt=""></div>
-      <div class="col-12 col-sm-6 col-md-4 col-lg-3 text-white mb-3 p-0 mr-3"><img class="img-fluid"
+      <div class="col-12 col-sm-6 col-md-4 col-lg-3 text-white mb-3 p-0 mr-3 mt-2"><img class="img-fluid"
           src="./images/e03.png" width="450" height="450" alt=""></div>
-      <div class="col-12 col-sm-6 col-md-4 col-lg-3 text-white mb-3 p-0 mr-3"><img class="img-fluid"
+      <div class="col-12 col-sm-6 col-md-4 col-lg-3 text-white mb-3 p-0 mr-3 ml-2"><img class="img-fluid"
           src="./images/e04.png" width="450" height="450" alt=""></div>
     </div>
   </div>
